added routed to the posts

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,7 +1,7 @@
-<nav>
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Logo</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
+<nav class="purple">
+  <div class="nav-wrapper purple">
+    <a href="/" class="brand-logo left" style="margin-left: 2rem">Flask App</a>
+    <ul id="nav-mobile" class="right">
       <li><a href="/">Home</a></li>
       <li><a href="/posts">Posts</a></li>
       <li><a href="/about">About</a></li>
