--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,6 @@
 <h1>Home</h1>
 <p>
   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam nobis aut,
-  sequi magni, totam minima officiis maxime hic alias suscipit voluptates
-  doloremque soluta dolores vitae qui non, quos veritatis recusandae.
+  sequi magni,
 </p>
 {% endblock %}
