POST method to posts added

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,7 +1,7 @@
 <nav class="purple">
   <div class="nav-wrapper purple">
-    <a href="/" class="brand-logo left" style="margin-left: 2rem">Flask App</a>
-    <ul id="nav-mobile" class="right">
+    <a href="/" class="brand-logo right" style="margin-right: 2rem">Flask App</a>
+    <ul id="nav-mobile" class="left">
       <li><a href="/">Home</a></li>
       <li><a href="/posts">Posts</a></li>
       <li><a href="/about">About</a></li>
