--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,5 +18,11 @@
 
     <!-- materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <!-- axios -->
+    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+    
+    <script type="text/javascript" src="{{ url_for('static', filename = 'main.js') }}"></script>
+
   </body>
 </html>
