--- a/templates/post.html
+++ b/templates/post.html
@@ -2,9 +2,10 @@
 
 {% block body %}
 
-
-<div class="card center-align">
+<div class="card center-align ">
   <div class="card-title">{{post.title}}</div>
+  <button onclick="deletePost()" class="btn delete-btn waves-effect" >Delete Post</button>
+  <button onclick="updatePost()" class="btn update-btn waves-effect" >Update Post</button>
   <p class="card-content pink lighten-2">{{post.body}}</p>
 </div>
 
