added readme & .gitignore, added db related dependencies

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="purple">
   <div class="nav-wrapper purple">
-    <a href="/" class="brand-logo right" style="margin-right: 2rem">Flask App</a>
+    <a href="/" class="brand-logo right" style="margin-right: 2rem">Flask-CRUD</a>
     <ul id="nav-mobile" class="left">
       <li><a href="/">Home</a></li>
       <li><a href="/posts">Posts</a></li>
