--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,13 @@
-{% extends 'layout.html' %} {% block body %}
+{% extends 'layout.html' %} 
+
+{% block body %}
 <h1>Home</h1>
 <p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam nobis aut,
-  sequi magni,
+  Flask Application that allows CRUD operations on 'Post' items.
 </p>
+
+<a class="btn waves-effect" href="#!">Source Code</a>
+<a class="btn waves-effect blue" href="/posts">View Posts</a>
+<a class="btn waves-effect pink" href="https://github.com/AluBhorta">AluBhorta</a>
+
 {% endblock %}
