--- a/templates/post.html
+++ b/templates/post.html
@@ -1,14 +1,31 @@
 {% extends 'layout.html' %} {% block body %}
 
+<div class="post-update-form">
+  <form>
+    <input
+      type="text"
+      name="title"
+      id="updateTitle"
+      placeholder="Enter new Title..."
+    />
+    <input
+      type="text"
+      name="body"
+      id="updateBody"
+      placeholder="Enter new Body..."
+    />
+    <button onclick="updatePost(event)" class="btn update-btn waves-effect">
+      Update Post
+    </button>
+  </form>
+</div>
+
 <div class="card center-align ">
   <div class="card-title">
     <h4>{{ post.title }}</h4>
   </div>
   <button onclick="deletePost()" class="btn delete-btn waves-effect">
     Delete Post
-  </button>
-  <button onclick="updatePost()" class="btn update-btn waves-effect">
-    Update Post
   </button>
   <p class="card-content purple lighten-4">
     {{ post.body }}
